--- a/WebLocators.properties
+++ b/WebLocators.properties
@@ -1,2 +1,5 @@
 imageLink = desktop
 basketSelect= add-to-basket-PO_Base
+firstName_Id= FiscalCodeForm-firstName-field
+lastName_Id= FiscalCodeForm-lastName-field
+fiscalCode_Id= FiscalCodeForm-fiscalCode-field
