--- a/WebLocators.properties
+++ b/WebLocators.properties
@@ -3,3 +3,7 @@ basketSelect= add-to-basket-PO_Base
 firstName_Id= FiscalCodeForm-firstName-field
 lastName_Id= FiscalCodeForm-lastName-field
 fiscalCode_Id= FiscalCodeForm-fiscalCode-field
+continue_checkout= buttonGoToPersonalInformationStep
+email_field =PersonDetailsForm-email-field
+confirm_emailfield= PersonDetailsForm-confirmation-email-field
+contact_phone=PersonDetailsForm-contact-phone-field
